fix: layout issue on mobile
not sure if this really fixes it though

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
     height: auto;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 600px) {
     .hero.card {
         width: 95%;
         max-width: 300px;
